# mirror-mirror

./: .gitattributes  .gitignore  JETSON_TESTING.md  README.md  debug_jetson.py  docker-compose.yml  main.py  nvidia-env  one_frame.py  pyproject.toml  pytest.ini  run_tests.sh  sdxs_camera.py  setup_jetson.sh  sync_to_jetson.sh  test_camera.py  test_system.py
.cursor/rules/: jetson.mdc
mirror_mirror/: audio_server.py  camera_server.py  display.py  models.py
scripts/: check_camera.py
src/mirror_mirror/: camera_server.py  common.py  decode.py  diffusion_server.py  display.py  front.py  headless_display.py  latent_decoder.py  latent_encoder.py  models.py  prompt_publisher.py  pygame_display.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_camera_server.py  test_models.py
wheels/: torch-2.5.0a0+872d972e41.nv24.08-cp310-cp310-linux_aarch64.whl
