[project]
name = "mirror-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.7.0",
    "betterproto>=2.0.0b7",
    "diffusers>=0.33.1",
    "fastrtc[stt,vad]>=0.0.24",
    "faststream[cli,redis]>=0.5.40",
    "google-genai>=1.15.0",
    "huggingface-hub[hf-xet]>=0.31.2",
    "janus>=2.0.0",
    "nvidia-cublas-cu12>=12.6.4.1 ; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12>=12.6.80 ; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12>=12.6.77 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12>=12.6.77 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu12>=9.5.1.17 ; sys_platform == 'linux'",
    "nvidia-cufft-cu12>=11.3.0.4 ; sys_platform == 'linux'",
    "nvidia-cufile-cu12>=1.11.1.6 ; sys_platform == 'linux'",
    "nvidia-curand-cu12>=10.3.7.77 ; sys_platform == 'linux'",
    "nvidia-cusolver-cu12>=11.7.1.2 ; sys_platform == 'linux'",
    "nvidia-cusparse-cu12>=12.5.4.2 ; sys_platform == 'linux'",
    "nvidia-cusparselt-cu12>=0.6.3 ; sys_platform == 'linux'",
    "nvidia-nccl-cu12>=2.26.2 ; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12>=12.6.85 ; sys_platform == 'linux'",
    "nvidia-nvtx-cu12>=12.6.77 ; sys_platform == 'linux'",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.0.0",
    "tenacity>=9.1.2",
    "torch==2.7.0 ; sys_platform != 'linux'",
    "torch @ https://pypi.jetson-ai-lab.dev/jp6/cu128/+f/031/a8530870d8e1c/torch-2.7.0-cp312-cp312-linux_aarch64.whl#sha256=031a8530870d8e1c71ff7709b1a39862647825e049bcd00aca47d0c2fce2363c ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "transformers>=4.51.3",
]

[project.scripts]
diffusion-server = "mirror_mirror.diffusion_server:app"

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
betterproto = { git = "https://github.com/danielgtaylor/python-betterproto", rev = "124613f55fa8ff62a460e1ad33c5c78723b703a0" }
